test/analyze/name_resolution/traits/multiple_methods_blocks.exp
Error: Name `Trait` already bound in module
test/analyze/name_resolution/traits/multiple_methods_blocks.myte:12:6-11
 12 | trait Trait {}
    |       ^^^^^